@@ -15,7 +15,7 @@ importFrom("nortest", "ad.test")
 importFrom("pander", "pander")
 import(rmarkdown)
 importFrom("stats", "aggregate", "anova", "na.omit", "qnorm", "rstudent", "sd") 
-importFrom("utils", "browseURL", "create.post", "download.file", "file.edit", "installed.packages", "menu", "packageVersion", "read.csv", "savehistory", "tail", "unzip", "write.csv") 
+importFrom("utils", "browseURL", "create.post", "download.file", "file.edit", "installed.packages", "menu", "packageVersion", "read.csv", "read.table", "savehistory", "tail", "unzip", "write.csv") 
 importFrom("xtable", "xtable")
 S3method(dotplot,default)
   S3method(dotplot,formula)
