@@ -1,5 +1,6 @@
 # v0.25.1
-- added SpellCheckFiles() which is a wrapper for spell checking a file or files in a folder; this returns a list classed as "wordlist" which has an associated print method.
+- added FindReplace() for replacng text strings in a specified file.
+- added SpellCheckFiles() which is a wrapper for spell checking a file or files in a folder; this returns a list classed as "wordlist" which has an associated print method. (based on similar functionality in the devtools package)
 - added package hunspell to the growing list of dependencies
 - fixed spelling in vignettes using SpellCheckFiles()
 - added local and global options for lists of words to ignore during spell checking.
